--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
         "@types/node": "^17.0.21",
         "@types/validator": "^13.7.1",
         "cors": "^2.8.5",
+        "cpf-cnpj-validator": "^1.0.3",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "mongoose": "^6.2.5",
